waa hagaajiyay maqaalkaan

--- a/Si'iid_Harti.mw
+++ b/Si'iid_Harti.mw
@@ -1,94 +1,176 @@
-{{pp-protected|small=yes}}
-{{Infobox ethnic group|
-|group=Reer Darawiish ({{Flagicon image|Dhulbahante flag.png}} Dhulbahante) <br>  البهانتة) عشيرة درویش)|image= [[File:Beesha Daraawiish (Dhulbahante).png|300px]] 
-|flag = 
-|region1 = {{flagcountry|Soomaaliya}}
-|region3 = {{flagcountry|Itoobiya}}
-|region4 = {{flagcountry|Kenya}}
-|langs=[[Somali language|Soomaali]]
-|rels= [[Islaamka]]
-|related-c=[[Majeerteen]],  [[Dishiishe]], [[Warsangali]] iyo [[Harti]] iyo [[Daarood]]
-}}
-{{caddayn u baahan}}
-[[File:Dhulbahante flag.png|thumb|Calanka Dhulbahante]]
-'''Dhulbante''', ([[Carabi]]: عشيرة درویش, ''qabiilka darawiish'', [[Carabi]]: قبيلة درویش) sidoo kale loo yaqaano '''Beesha Darawiish''' ama '''siciid harti''' waa qabiil kamida [[Beelaha Soomaalida|qabaailka Soomaaliyeed]] ee dega waqooyiga iyo galbeedka [[Soomaaliya]], ee ku caan baxday waa qabiilka ee raacay [[Sayyidka]] iyo halganka [[Dawlada Darawiish]]. Dhulbahante waxaa kaloo loo yaqaan ''Reer Daraawiish'', waxayna kasoo jeedaan beel waynta [[Daarood]]. Deegaanada oo reer darawiish u gaar ah oo in kabadan 40 kun ee dad ku nool, waxaa ka mid ah hareeraha [[Fiqifuliye]], [[Las Anod]], [[Buuhoodle]] iyo [[Marqaanweyne]]. Dhaqanka Dhullbahante waa mid ka salaysan halgankii gumeysi-diid ee [[Dareema Caddo]] iyo [[Taleex]] ka gilgishey, ee aragtida ka dhiibta arrimaha Soomaaliya ee saamaynta tooska ah ku leh siyaasadda, iyagoo halgankii xornimo doonka gacan wayn kagaystay. Dhulbahante oo loogu yeedho daraawiish sababtuna ay tahay waxay ahaayee dadkii aas aasay oo hir galiyey dawladii islaamiga ahyd oo kadhisnayd gobolada SSC taasoo ay soomalida ugu yeeraan daraawiishta .
+'''Dhulbahante''' waa qabiil Soomaaliyeed oo ka mid ah [[Harti]] ee beelwaynta [[Daarood]]<ref>{{cite web |title=Somalia: Minorities and indigenous peoples |url=https://minorityrights.org/country/somalia/ |publisher=Minority Rights Group International |accessdate=18 September 2019}}</ref><ref>{{cite book |last1=Lewis |first1=Ioan M |title=A Pastoral Democracy: A Study of Pastoralism and Politics Among the Northern Somali of the Horn of Africa |date=1999 |publisher=James Currey Publishers |page=12 |url=https://books.google.com/books?id=eK6SBJIckIsC&pg=PA12&lpg=PA12&dq=i+m+lewis+daarood+1,000,000#v=onepage |accessdate=18 September 2019|isbn=9780852552803 }}</ref><ref>{{cite journal |last1=Lewis |first1=Ioan M |title=Clanship and Contract in Northern Somaliland |journal=Africa: Journal of the International African Institute |date=July 1959 |volume=29 |issue=3 |pages=274–293 |url=https://www.scribd.com/document/127191815/Clanship-and-Contract-in-Northern-Somaliland-by-I-M-lewis |accessdate=18 September 2019|doi=10.2307/1157617 |jstor=1157617 }}</ref>.Dhulbahante wuxuu degaa saddexda gobol ee woqooyiga Soomaaliya [[Sool]] , [[Sanaag]] , iyo [[Togdheer]] , <ref>{{cite book |last1=Hoehne |first1=Markus V. |title=Between Somaliland and Puntland: Marginalization, Militarization and Conflicting Political Vision |date=2015 |publisher=Rift Valley Institute |page=57}}</ref> sidoo kale waxay degaan jubooyinka, gaar ahaan magaalada [[Kismaayo]].<ref name="PART IV KISMAYO: PEACE-MAKING">{{cite web |last1=Bradbury |first1=M |title=PART IV KISMAYO: PEACE-MAKING |url=https://oxfamilibrary.openrepository.com/bitstream/handle/10546/122751/bk-somali-conflict-part4-010194-en.pdf?sequence=4&isAllowed=y |publisher=Oxfam Library |accessdate=21 September 2019}}</ref><ref name="International Crisis Group">{{cite web |last1=Elder |first1=Claire |last2=Yusuf |first2=Zakaria |title=Jubaland in Jeopardy: The Uneasy Path to State-Building in Somalia |url=https://www.crisisgroup.org/africa/horn-africa/somalia/jubaland-jeopardy-uneasy-path-state-building-somalia |publisher=International Crisis Group |accessdate=21 September 2019|date=2013-05-21 }}</ref> Dalka [[Itoobiya]] waxay ka degaan [[Doolow|Soonaha Doolow]] gaar ahaan xaafadaha [[Bookh]], [[Danot (woreda)|Danot]] iyo [[Wardheer]].<ref name="africa.upenn.edu">{{cite web |last1=Bryden |first1=Matt |title=Report on Mission to Haud Area (REGION 5) |url=http://www.africa.upenn.edu/eue_web/Haud_gen.htm |publisher=UNITED NATIONS DEVELOPMENT PROGRAMME |accessdate=17 September 2019}}</ref>
 
-==Beesha==
-Daarood waa [[beel]] ka mid ah beelaha [[Soomaali]]da kuwaasi oo degan [[Geeska Afrika]]. Beesha Daarood waxaay degtaa wadanka [[Soomaaliya]], wadanka [[Itoobiya]] iyo deegaano ka tirsan wadanka [[Kiinya]].
-Guud ahaan, beesha Daarood waxaa ka farcama reero badan oo ka mid yihiin:
+Beeshu waxay caan ku tahay halgankii dagaalka ahaa ee la galeen Boqortooyadii Ingriiska iyo dowrkii taariikhiga ahaa ay ka qaadatay taageerida Dhaqdhaqaaqa Darawiishta oo dagaal dhiig badan ku daatay ay la galeen quwadihii gumaysiga [[1899]] ilaa [[1920]].<ref name="Springer">{{cite book |last1=De Vries |first1=Lotje |last2=Englebert |first2=Pierre |last3=Schomerus |first3=Schomerus |title=Secessionism in African Politics: Aspiration, Grievance, Performance, Disenchantment |date=21 September 2018 |publisher=Springer |page=96}}</ref> Dhaxalkaas awgood, ayaa magaca Daraawiish wuxuu ku dhowaaday in oo la mid noqdo magaca qabiilkan.<ref>{{cite book |last1=Hoehne |first1=Markus V. |title=Between Somaliland and Puntland: Marginalization, Militarization and Conflicting Political Vision |date=2015 |publisher=Rift Valley Institute |pages=78–79 |url=https://reliefweb.int/sites/reliefweb.int/files/resources/Between%20Somaliland%20and%20Puntland%20by%20Markus%20Hoehne%20-%20RVI%20Contested%20Borderlands%20%282015%29%20%281%29.pdf}}</ref>
+==Qoraal kooban==
+Magaca beesha Dhulbahante oo dhameestiran waa [[Harti|Saciid Saalax Cabdi]] [[Daarood|Maxamed Cabdiraxmaan bin Ismaaciil al-Jabarti]] . Dhulka aasaasiga beesha ayaa ah gobolka [[Haud]] iyo [[Dooxada Nugaal]], <ref>{{cite book |last1=Hoehne |first1=Markus V. |title=Between Somaliland and Puntland: Marginalization, Militarization and Conflicting Political Vision |date=2015 |publisher=Rift Valley Institute |page=38 |url=https://reliefweb.int/sites/reliefweb.int/files/resources/Between%20Somaliland%20and%20Puntland%20by%20Markus%20Hoehne%20-%20RVI%20Contested%20Borderlands%20%282015%29%20%281%29.pdf}}</ref> qaybaha qabiillada ee kala dega goboladaas ayaa la isugu yeeraa Reer Hawd iyo Reer Nugaal. Xilligan, beeshu waxay leedahay 13 Garaad (ugaasyada beesha). <ref name="declaration">{{Cite web|url=http://www.garoweonline.com/artman2/publish/Features_34/Somalia_The_Bo_ame_Declaration_of_Dhulbahante_Clan_Elders.shtml|work=GaroweOnline.com|title=Somalia: The Bo'ame Declaration of Dhulbahante Clan Elders|date=2007-11-22|accessdate=2010-11-24|url-status=dead|archiveurl=https://web.archive.org/web/20111219090824/http://www.garoweonline.com/artman2/publish/Features_34/Somalia_The_Bo_ame_Declaration_of_Dhulbahante_Clan_Elders.shtml|archivedate=2011-12-19}}</ref>Garaadka ugu sareeya ee madaxdhaqameedka ayaa ah Garaad [[Jaamac Garaad Cali]] oo ka dhaxlay adeerkiis Garaad [[Cabdiqani Garaad Jaamac]].<ref>{{cite book |last1=Connaughton |first1=Stacey L. |last2=Berns |first2=Jessica |title=Locally Led Peacebuilding: Global Case Studies |date=2019 |publisher=Rowman & Littlefield |page=84 |url=https://books.google.com/books?id=46elDwAAQBAJ&pg=PA84&lpg=PA84&dq=Garaad+Abdulqani+Garaad+Jama,#v=onepage |accessdate=20 September 2019|isbn=9781538114117 }}</ref><ref>{{cite book |last1=Ingiriis |first1=Mohamed H. |title=The Suicidal State in Somalia: The Rise and Fall of the Siad Barre Regime, 1969–1991 |date=2016 |publisher=UPA |page=238 |url=https://books.google.com/books?id=Vzi6CwAAQBAJ&pg=PA361&lpg=PA361&dq=Garaad+Abdulqani+Garaad+Jama,#v=onepage |accessdate=20 September 2019|isbn=9780761867203 }}</ref> Adeegsiga ciwaanka Garaad (ayaa aad ugu baahsan Dhulbahante),<ref>{{cite book |last1=Buur |first1=L |last2=Kyed |first2=K |title=State Recognition and Democratization in Sub-Saharan Africa: A New Dawn for Traditional Authorities? |date=2007 |publisher=Springer |page=176 |url=https://books.google.com/books?id=vMeHDAAAQBAJ&pg=PA176&lpg=PA176&dq=dhulbahante+i+m+lewis#v=onepage |accessdate=21 September 2019|isbn=9780230609716 }}</ref> waxaa markii ugu horaysay daah furay awowgii weynaa ee Garaad Shirshore oo horey ugaas ahaan ugu soo shaqeeyay.<ref>{{cite book |last1=Hoehne |first1=Markus V. |title=Between Somaliland and Puntland - Contested Borderlands |date=2015 |page=83 |url=https://reliefweb.int/sites/reliefweb.int/files/resources/Between%20Somaliland%20and%20Puntland%20by%20Markus%20Hoehne%20-%20RVI%20Contested%20Borderlands%20%282015%29%20%281%29.pdf |accessdate=20 September 2019}}</ref>
+==Siyaasada ==
+Sannadkii 1998, waxay beelaha kale ee Harti la aasaaseen Dawlad goboleedka [[Puntland]] sababo qaraabo wadaag awgood.<ref name="Lund">{{Cite book|url=https://books.google.com/books?id=pDLNDgAAQBAJ&pg=PT301&dq=dhulbahante+sool|title=Rule and Rupture: State Formation Through the Production of Property and Citizenship|last1=Lund|first1=Christian|last2=Eilenberg|first2=Michael|date=2017-05-04|publisher=John Wiley & Sons|isbn=9781119384809|language=en}}</ref><ref>{{cite journal |last1=Höhne |first1=Markus V. |title=Traditional Authorities in Northern Somalia: Transformation of positions and powers |journal=Max Planck Institute for Social Anthropology |page=16 |url=https://www.eth.mpg.de/pubs/wps/pdf/mpi-eth-working-paper-0082.pdf}}</ref><ref>{{cite journal |last1=Mesfin |first1=Berouk |title=The political development of Somaliland and its conflict with Puntland |journal=Institute for Security Studies |date=September 2009 |page=10 |url=https://www.files.ethz.ch/isn/111689/P200.pdf}}</ref>
+Si ku saleysan isir ahaan, xiriirka qabaailada Puntland iyo midnimada soomaaliyeed, ayaa codbixiyaasha Sanaag iyo gaar ahaan reer Sool waxay go’aansadeen inay aad uga yaraayeen aftidii madaxbanaanida iyo dastuurka [[Somaliland]] ee 2001.<ref name="Lund"/><ref>{{cite journal |last1=Höhne |first1=Markus V. |title=Traditional Authorities in Northern Somalia: Transformation of positions and powers |journal=Max Planck Institute for Social Anthropology |page=16 |url=https://www.eth.mpg.de/pubs/wps/pdf/mpi-eth-working-paper-0082.pdf}}</ref><ref>{{cite journal |last1=Mesfin |first1=Berouk |title=The political development of Somaliland and its conflict with Puntland |journal=Institute for Security Studies |date=September 2009 |page=10 |url=https://www.files.ethz.ch/isn/111689/P200.pdf}}</ref> In kasta oo beesha Dhulbahante ay ku kala jabtay khilaafkii 2007, iyada oo qaarna la safteen Somaliland iyo ciidamadeeda ee agagaarka Laascaanood , Baaqii Boocame ee 2007 ayaa dhammaan salaadiinta beelaha Dhulbahante diiday Ajendaha goosashada Somaliland ayna dalbadeen in laga saaro maleeshiyooyinkeeda dhulka dhaqanka u ah beesha. <ref name="markacadey.net">{{cite press release
+ |title       = The Declaration of Clan Elders from Sool, Sanaag and Cayn Regions (North Somalia).
+ |publisher   = Declaration of Dulbahante Traditional clan chiefs
+ |date        = November 23, 2007
+ |url         = http://www.markacadey.net/main/news.php?readmore=2405
+ |accessdate  = 2007-11-23
+ |url-status     = dead
+ |archiveurl  = https://web.archive.org/web/20071128023309/http://www.markacadey.net/main/news.php?readmore=2405
+ |archivedate = November 28, 2007
+}}</ref><ref name="jstor.org"/>
 
-Lahjadaha ay ku hadlaan daaroodku waa ay kala duwan yihiin oo iskuma dhowa, tusaale ahaan meesha ay kuwa dega Itoobiya lahjad gooni ah uga hadlaan kuwa dhinaca bari degana lahjad gaara ayay ku hadlaan, kuwa sanaag segana lahjad gaara ayaabay ku hadlaan.
-Asal ahaan odaygii Daarood ahaa waxa uu ku yimid Yaman Jabarti Ismaaciil isaga oo sheekh ah oo faafinaya diinta Islaamka gaar ahaana waxa uu ka soo degay meel u dhaw degmada Laasqoray ee gobolka Sanaag waxaa uu mudo diinta Islaamka ka faafinayey dhulka Bariga iyo Bartamaha Geeska Afrika. Daarood waxaa dhashay Doombiro Dir.
+Qabsashadii Laascaanood ka dib 2007, waxaa soo ifbaxay dhaqdhaqaaq midow oo ujeedadiisu ahayd in Somaliland laga saaro dhulalka Dhulbahante. Dhaqdhaqaaqa loogu magac daray Maamulka Midnimada iyo Badbaadinta ee Gobollada [[SSC]] ee Soomaaliya ( Hogaanka Badbaadada iyo midaynta SSC (HBM-SSC )) waxaa hormood ka ahaa [[Saleebaan Ciise Ahxmed]] waxaana la aasaasey 2009.<ref>{{cite book |last1=Hoehne |first1=Markus V. |title=Between Somaliland and Puntland - Contested Borderlands |date=2015 |pages=81–2 |url=https://reliefweb.int/sites/reliefweb.int/files/resources/Between%20Somaliland%20and%20Puntland%20by%20Markus%20Hoehne%20-%20RVI%20Contested%20Borderlands%20%282015%29%20%281%29.pdf |accessdate=20 September 2019}}</ref>
+Madax dhaqameedyada ugu muhiimsan ee taageeray Dhaqdhaqaaqa SSC waxaa ka mid ahaa Garaad Jaamac Garaad Cali, Garaad Jaamac Garaad Ismaaciil, iyo Garaad Cali Buraale Xasan<ref>{{cite book |last1=Hoehne |first1=Markus V. |title=Between Somaliland and Puntland: Marginalization, Militarization and Conflicting Political Vision |date=2015 |publisher=Rift Valley Institute |page=83|url=https://www.researchgate.net/publication/277325164
+ |accessdate=21 September 2019}}</ref>
+==Meelaha ee ku badantahay beesha==
+Beeshu waxay degtaa [[Taleex]] , waxay ku badantahay [[Xuddun]] iyo degmooyinka Laascaanood .<ref>{{cite web|title=EASO Country of Origin Information Report Somalia Security Situation|url=https://www.ecoi.net/file_upload/1226_1457606427_easo-somalia-security-feb-2016.pdf}}</ref> Xog ururin laga sameeyay degmada Laascaanood 2011 jawaab bixiyaasha ayaa loo aqoonsaday Dhulbahante 92.5%  halka 2.5%, 1.5% iyo 1.3% loo aqoonsaday Hawiye , Bantu iyo Isaaq siday u kala horreeyaan.<ref>{{cite journal |last1=Somali Observatory of Conflict and Violence Prevention |title=Safety and security District baseline report: Las Anod |date=2011 |pages=15–16 |url=https://www.researchgate.net/publication/313854057 |accessdate=20 September 2019}}</ref>  Gobolka Sanaag beeshu waxay ka degtaa degmada [[Ceerigaabo]] ayada iyo beesha [[Habar Yoonis]],<ref>{{cite book|last1=Gebrewold|first1=Belachew|title=Anatomy of Violence: Understanding the systems of conflict and violence in Africa|publisher=Ashgate Publishing Ltd|pages=130|url=https://books.google.com/books?id=VLPW6RBUshQC&pg=PA130&lpg=PA130&dq=sanaag+region+clans#v=onepage|accessdate=14 November 2017|isbn=9781409499213|date=2013-03-28}}</ref>  sidoo kale [[Togdheer]], beeshaan ayaa ku badan [[Buuhoodle]].<ref>{{cite book|last1=Hoehne|first1=Markus V.|title=Borders & Borderlands as resources in the Horn of Africa|pages=113|url=https://books.google.com/books?id=fZiSxrTGHMkC&pg=PA113&lpg=PA113&dq=buuhoodle+district#v=onepage|accessdate=14 November 2017|isbn=9781847010186|year=2010}}</ref> Degmada Buuhoodle waxaa laga dhigay gobol ka mid ah maamul goboleedka Puntland magaceedana waxaa loo beddelay Cayn sanadkii 2004.<ref>{{cite book |last1=Feyissa |first1=Dereje |last2=Hoehne |first2=Markus V. |title=Borders & Borderlands as Resources in the Horn of Africa |date=2010 |publisher=Boydell & Brewer |page=113 |url=https://books.google.com/books?id=fZiSxrTGHMkC&pg=PA114&lpg=PA114&dq=buuhoodle+district+dhulbahante#v=onepage|isbn=9781847010186 }}</ref> . Sidoo kale ganacsatada dhulbahaante waxee degaan Jubaland, magaalada Kismaayo iyo hareeraheeda.<ref name="PART IV KISMAYO: PEACE-MAKING"/><ref name="International Crisis Group"/> 
 
-==Ciyaaraha==
-Ciyaaraha [[Dhulbahante]] waxaa ka mid ah [[Jandheer]].
+Dalka Itoobiya , beesha Dhulbahante waxay Gobolka Soomaali galbeed ka degaan aagga Doollow , gaar ahaan xaafadaha [[Bookh]], [[Danot (woreda)|Danot]] iyo [[Wardheer]] . Dalka [[Kenya]] gaar ahaan Gobolka Waqooyi Bari waxaa ku nool beel ku abtirsata dhulbahaante<ref>{{cite book |last1=Raeymaekers |first1=Timothy |title=Violence on the Margins: States, Conflict, and Borderlands |date=27 Aug 2013 |publisher=Springer |page=69 |url=https://books.google.com/books?id=oYCYAAAAQBAJ&pg=PA69&lpg=PA69&dq=dhulbahante+in+kenya#v=onepage |accessdate=20 September 2019|isbn=9781137333995 }}</ref>
 
-==Deegaan==
-Maslaxo haddii aad leedahay, magaalooyinka iyo tuulooyinka beelaha reer darawiish, ku tijaabi inaad eegtid, qoraalka ama maqaalka [[deegaanada beelaha reer darawiish]].
+Dhulbahante wuxuu si gaar ah u degay magaalooyinka waqooyiga Soomaaliya ee Laascaanood iyo Buuhoodle .<ref>{{cite journal |last1=Hoehne |first1=Markus Virgil |title=Diasporic engagement in the educational sector in post-conflict Somaliland: A contribution to peacebuilding? |journal=Diaspeace |page=42 |url=https://jyx.jyu.fi/bitstream/handle/123456789/36879/1/DIASPEACE_WP5.pdf |accessdate=20 September 2019}}</ref>  Waxaa intaa dheer inay si fiican uga muuqdaan magaalooyinka [[Ceerigaabo]] iyo [[Garoowe]] .
 
-==Jilibada==
-Jilibada reer darawiish ee guud waa Faarax Garad, Maxamud garad iyo Bah Nugal.
+==Taariikh==
+==Geedka qabiilka==
+*[[Cabdiraxmaan bin Ismaaciil al-Jabarti]] (Daarood)
+** Maxamed Cabdiraxmaan (Kabaalalaah)
+*** Cbdi Maxamed (Kombe)
+****Saalax Cabdi (Harti)
+*****Saciid Cabdi ('''Dhulbahante''')
+******Axmed Saciid (Turyar)
+******Yoonis Saciid
+******Maxamed Saciid
+******Xusseen Saciid (Hayaag)
+******Muuse Saciid
+*******Barre Muse
+*******Cussman Muse (Ebirrar)
+*******Maxamed Muse
+*******Abokor Muse
+*******Cabdale Muse
+********Yaxye Cabdale
+********Adan Cabdale (Hinjile)
+********Habarwa Cabdale
+*********Khalid Habarwa
+*********Shirshore Habarwa
+**********Hamud 'Ugaas' Shirshore
+**********Xusseen 'Ugaas' Shirshore
+**********Maxamuud 'Ugaas' Shirshore
+**********Xassan 'Ugaas' Shirshore
+***********Cali Xassan
+***********Faarax Xassan
+***********Samakab Xassan
+***********Khayre Xassan
+***********Saalex Xassan
+***********Samatar Xassan
+***********Geedi Xassan
+***********Haaruun Xassan
+******Cabdi 'Garad' Shirshore (Qayaad)
+*******Cumar Cabdi
+*******Khayr Cabdi
+********Ibrahim Khayre
+********Cali Khayre
+********Cusmaan Khayre
+********Waceys Khayre
+******Maxamuud 'Garad' Shirshore
+*******Waceys Maxamuud (Cumar Waceys)
+*******Saciid Maxauud
+********Jamac Saciid 
+*********Samakab Jamac
+*********Axmed Jamac
+*********Maxamuud Jamac
+*********Warfa Jamac
+********Maxamed Saciid (Ugadhyahan)
+*********Aadan Maxamed
+*********Maxamuud Maxamed
+*********Samakab Maxamed
+**********Cabdulle Samakab
+***********Waceys Cabdulle
+***********Abokor Cabdulle
+***********Axmed Cabdulle
+************Shirwa Axmed
+************Cusmaan Axmed
+************Nur Axmed
+*************Seed Nur
+*************Samatar Nur
+*************Yusuf Nur
+*************Musa Nur
+*************Samakab Nur (Bihina Cali)
+*************Ismail Nur (Bihina Cali)
+*************Hersi Nur
+*************Mohamed Nur
+*************Cali Nur
+************Naleya Axmed
+*************Adan Naleya
+*************Cabdulle Naleya
+*************Samaad Naleya
+*************Shirwa Naleya (Bah ina Farax)
+*************Liban Naleya (Bah ina Farax)
+*************Yusuf Naleya (Bah ina Farax)
+*************Cilmi Naleya
+*************Jibril Naleya
+************* Cali Naleya
+**************Farax Cali (Bah Rikhaaye)
+**************Maxamed Cali (Bah Rikhaaye)
+**************Samatar Cali (Bah Rikhaaye)
+**************Igal Cali (Bah ina Araale)
+**************Abdi Cali (Bah ina Araale)
+**************Fahiye Cali (Bah ina Araale)
+**************Axmed Cali (Bah ina Araale)
+**************Xuseen Cali (Bah Ina Samatar)
+**************Yacquub Cali (Bah Ina Samatar)
+**************Yusuf Cali (Bah Abdulle)
+**************Cilmi Cali (Bah Abdulle)
+**************Cumar Cali (Bah Idris)
+**************Maxamuud Cali (Bah Idris)
+**************Waceys Cali (Bah Idris)
+******Faarax 'Garaad' Shirshore
+*******Yasin 'Garad' Farax
+*******Cabdulleh Garad Farax
+********Cali 'Garad' Cabdulle
+********Maxamed 'Garad' Cabdulle (Bah'ararsame)
+*********Maxamuud 'Garad' Maxamed (Jabane)
+**********Maxamed Maxamuud
+**********Warsame Maxamuud
+**********Liban Maxamuud 
+**********Sharmarke Maxamuud
+********Guleed 'Garaad' Cabdulle (Barkad)
+*********Cli Gulled
+*********Amir Gulled
+*********Maxamuud Gulled
+********Axmed 'Garaad' Cabdulle
+*********Samakab Axmed (Odala)
+*********Egal Axmed
+*********Warfa Axmed
+*********Hassan Axmed 
+*********Naleye Ahmed (Egal Naleya)
+*********Cali'Geri Axmed
+**********Ismaciil Cali’Geri
+**********Hersi Ali’Geri
+**********Shawe Ali’Geri
+**********Burale Ali’Geri
+**********Gulled Ali’Geri
+**********Subaan Ali’Geri
+*********Adan Axmed
+**********Farax Adan
+**********Mahad Adan 
+**********Waceys Adan
+**********Hagar Adan 
+***********Gedi Hagar (Bah Ogaden)
+***********Addaad Hagar (Bah Ogaden)
+***********Warsame Hagar (Bah Ogaden)
+***********Cilmi Hagar (Bah Ogaden)
+***********Amir Hagar (Bah Ogaden)
+***********Gulled Hagar (Bah Ogaden)
+***********Ayaar Hagar (Bah Warsengali)
+***********Fatah Hagar (Bah Warsengali)
+***********Adan Hagar (Bah Warsengali)
+***********Adan Hagar (Bah Warsengali)
+***********Farax Hagar (Bah Warsengali)
 
-Jilibada reer darawiish ee ugu weyn waa Ugaadhyahan. Jibalada reer darawiish labaad ee ugu weyn waa Axmed garaad. Jilibada reer darawiish ee saddexaad ee ugu weyn waa Jama Siyad iyo Qayaad. Jilibada reer darawiiish ee afaraad ee ugu weyn waa Reer Hagar iyo Hayaag. Jilibada reer darawiish ee shanaad ee ugu weyn waa Baharsame.
+==Tixraac==
 
-==Shuruudaha==
-[[File:Garaadka guud ee reer darawiish garaad jaamac garaad cali.jpg|thumb|garaadka guud ee reer darawiish garaad jaamac garaad cali]]
 
-Shuruudaha Dhulbahante ama Beesha Darawiish waxaa ka mid ah:
-*Shuruudaha garaadka guud ee reer darawiish
-*Shuruudaha bandhigta Ismail Mire
-*Shuruudaha qanuunka [[Sayid Mah]]
-*Shuruudaha guud ee wadamada Soomaaliyeed
-*Shuruudaha [[Urwayni]]
 
-==Sidoo kale fiiri==
-*[[Soomaali|Beelaha Soomaalida]]
 
-==Xogta Ttixraacaha==
-{{reflist}}
 
-*http://somalilibrary.net/wp-content/uploads/magalone/churchil-and-the-mud-mullah-of-somaliland/pdf/full.pdf
-https://archive.org/details/seventeentripsth00sway/page/n5/mode/2up
-*https://archive.org/details/officialhistory00stafgoog
-https://ia800808.us.archive.org/31/items/seventeentripsth00sway/seventeentripsth00sway.pdf
-https://ia800504.us.archive.org/33/items/TheMadMullahOfSomaliland/214616_The_Madmullah_Of_Somaliland_1916_1921.pdf
-*https://archive.org/details/TheMadMullahOfSomaliland/page/n59/mode/2up?q=pass
-*https://archive.org/details/officialhistory00stafgoog/page/n5/mode/2up?q=
 
-==Dabaacaha gabay==
-*https://cpb-us-w2.wpmucdn.com/u.osu.edu/dist/5/1926/files/2016/02/diiwaanka-gabayadii-sayid-maxamed-cabdulle-xasan-2015_07_08-16_13_50-UTC-1f1kdxm.pdf gabayada sayyidka
-*https://webcache.googleusercontent.com/search?q=cache:WWOTQrZQnfoJ:https://idoc.pub/documents/diiwaanka-gabayadii-sayid-maxamed-cabdulle-xasan-20150708-161350-utc-1f1kdxm-on23j9y2v3l0+&cd=4&hl=en&ct=clnk&gl=uk gabayada sayyidka
-*https://web.archive.org/web/20180713202443/http://dspace-roma3.caspur.it/bitstream/2307/2960/1/The%20scramble%20in%20the%20Horn%20of%20Africa.%20History%20of%20Somalia%20(1827-1977).pdf
-*https://arcadia.sba.uniroma3.it/bitstream/2307/5384/1/Proclaim%20to%20the%20people_Five%20poems%20by%20Sayyid%20Mu%E1%B8%A5ammad%20%27Abd%20All%C4%81h%20%E1%B8%A4asan%20of%20Somalia.pdf gabay translation english
-*https://www.islamicfinder.org/quran/surah-al-baqara/?translation=somali-mahmud-muhammad-abduh (surah baqarah - somali translate)
-*https://www.islamicfinder.org/quran/surah-al-humaza/1/?translation=somali-mahmud-muhammad-abduh (surah humaza - somali translate)
-*https://cpb-us-w2.wpmucdn.com/u.osu.edu/dist/5/1926/files/2016/02/Dictionary-Biology-1s0uug7.pdf (qaamuus - dictionary)
-*https://org.uib.no/smi/sa/10/10Defeat.pdf (gudban - ingiriis)
-*https://so.wikipedia.org/wiki/Doonis (guurka)
 
-==Maqaalaha aqoonyaasha==
-https://so.wikipedia.org/wiki/Sayyidka
-*http://webcache.googleusercontent.com/search?q=cache:yHAjUZmwU7YJ:www.somalinet.com/forums/viewtopic.php%3Ft%3D221458%26start%3D90+&cd=5&hl=en&ct=clnk&gl=uk Jilib iyo Qabiil
-*https://www.docdroid.net/y9hMwyY/ismaciil-mire-axmed-faarax-idaaja.pdf
-*https://barkhadawcali.files.wordpress.com/2016/09/dabkuu-shiday-darwiishkii_daraama_lavorato1.pdf Ragxun, Indhabadan, Shiikhyaale, Miinanle, Dharbash
-*https://www.docdroid.net/EDBBrGZ/ismail-mire-translation.pdf#page=11 Ismail Mire - Ingiriis
-*https://webcache.googleusercontent.com/search?q=cache:Dc48Qahq7iQJ:https://so.wikipedia.org/wiki/Reer_Daraawiish+&cd=1&hl=en&ct=clnk&gl=uk (reer darawiish)
-*https://webcache.googleusercontent.com/search?q=cache:Fd3AY1Q6vDIJ:https://so.wikipedia.org/wiki/Qusuusi+&cd=3&hl=en&ct=clnk&gl=uk (Qusuusi)
-*https://so.wikipedia.org/w/index.php?title=Dhulbahante&diff=203484&oldid=203317 (Qusuusi), (Reer Daraawiish)
-*https://so.wikipedia.org/wiki/Radhi_Jama
-**https://so.wikipedia.org/wiki/Harti_Galbeed
-**http://www.abtirsi.com/view.php?person=215
-*https://so.wikipedia.org/wiki/Xuduudkii_1908
-**https://so.wikipedia.org/wiki/Heshiishka_iyo_xuduudka_Illig
-*https://so.wikipedia.org/wiki/Caasimadaha_Daraawiish
-*https://so.wikipedia.org/wiki/Darwiishnimo
-*https://so.wikipedia.org/wiki/Mahiiggaan
-*https://so.wikipedia.org/wiki/Xarunta_Fadhiweyn_ee_Darawiish
-*https://so.wikipedia.org/wiki/Wiish
-*https://so.wikipedia.org/wiki/Garaadada_Dhulbahante
 
-{{Beelaha Soomaalida}}
-{{Commons|Category:Darod}}
-[[Category:Qabiilada Soomaalida]]
-[[Category:Soomaali]]
-[[Category:Dadka Soomaaliga]]
+
+{{Template:Beelaha Soomaalida}}
