--- a/Jijeele.mw
+++ b/Jijeele.mw
@@ -17,22 +17,21 @@ Jijeele yaquub was abgal waxay ka mid tahay Beelwaynta [[Gugundhabe]] [[Hawiye]]
 <br>
 
 == Hordhac ==
+Jijeele waa beel ka tirsan beelwaynta [[Hawiye]], Beeshu waxay degta oo ay deegan u leedahay Gobolada koonfur ee dalka [[Somalia]] gaar ahaan gobolada kala ah [[Hiran]] ,[[Bay]] ,[[Bakool]] iyo [[Shabeelada hoose]] iyo Banaadir.
 
-Beesha [[Jijeele]] waxay ka tirsantahay beelwaynta [[Hawiye]] Beeshu waxay degta oo ay deegan u leedahay Gobolada koonfur ee dalka [[Somalia]] gaar ahaan gobolada kala ah [[Hiran]] ,[[Bay]] ,[[Bakool]] iyo [[Shabeelada hoose]] iyo Banaadir.
-
- Dagmooyinka Caanka ah ee beeshu dagto waxaa ka mid ah Baladweyn,farlibaax,Quracjoome,Ceelcade,Buqgoosaar, Ceelbarde, Buurhakaba, Diinsoor,ufuroow iyo xudur. sidoo kale Beeshu waxay dagtaa Gobolka Shabellada dhaxe sida Basra. Shabelaha Hoose sida Baladul-amiin, Baqdaad iyo Mubaarak ee dagamada afgooye hoos timaada. 
+Dagmooyinka Caanka ah ee beeshu dagto waxaa ka mid ah Baladweyn,farlibaax,Quracjoome,Ceelcade,Buqgoosaar, Ceelbarde, Buurhakaba, Diinsoor,ufuroow iyo xudur. sidoo kale Beeshu waxay dagtaa Gobolka Shabellada dhaxe sida Basra. Shabelaha Hoose sida Baladul-amiin, Baqdaad iyo Mubaarak ee dagamada afgooye hoos timaada. 
 
 Qaab-dhismeedka Beeshu waa sida:
-JIJEELE waa 4 lafood 1.DUDBIYE 2.XEERMAGE 3.Maxme(curudka) 4.KITSHE:
+Jijeele waa 4 lafood 1.Dudbiye 2.Xeermage 3.Maxme(curudka) 4.Kiteshe.
 
-DUDBIYUHU Waa 2 lafood:1.Maxmed iyo 2.Guudwaa..
+Dudbiyuhu Waa 2 lafood:1.Maxmed iyo 2.Guudwaa..
 
 Maxamadku waa Makaa'il Maxamed(Iidsuge iyo Dumaal) iyo Yacquub Maxamed iyo Kulmiye.
 XEERMAGE: SABTI IYO SHALASHAME.Sabtigu waa(ree-wabar,looboge,faranjecle iyo dharooye).
 
 Beesha waxaa ka dhashay Wasiir xareed faarax oo ahaa wasiirka ka tirsan dowladiii Adan Cabdulle Cusmaan, xilal kala duwana kasoo qabtay xukuumadii kacaanka. prof Maxamuud maxamed Guure Aun oo siyaasi caan ah asigoo xilibaan ah ku dhintay Xamar 2015. Dr. cumar idris sheekh oo ahaa Amb. qadar u fadhiya somalia, IYO Dr ibrahim cali xuseen oo ah nin xaahayada waawayn madax kasoonoqday muddo dheer.. 
 
-Beeshu waxay wada dasheen beelaha Gugundhabe ee 4ta ah: jidle, baadicade, abubakr tikaale(baydiisle) iyo jijeele. 
+Beeshu waxay wada dhasheen beelaha Gugundhabe ee 4ta ah: jidle, baadicade, abubakr tikaale(baydiisle) iyo jijeele.
 
 == Shaxda Beesha ==
 
