*Empty MediaWiki Message*

--- a/Nana_Akufo-Addo.mw
+++ b/Nana_Akufo-Addo.mw
@@ -1,4 +1,54 @@
-[[File:Nana Akufo-Addo at European Development Days 2017.jpg|thumb]]
-'''Nana Addo Dankwa Akufo-Addo''' (wuxuu dhashay 29 Maarso 1944) hadda waa Madaxweynaha Ghana. Wuxuu xafiiska qabtay ilaa 7 Janaayo 2017. Wuxuu horay u soo noqday Xeer Ilaaliyaha Guud 2001 ilaa 2003 iyo markii uu ahaa Wasiirka Arimaha Dibada 2003 ilaa 2007 intii uu hogaaminayay maamulka Kufuor.
+{{Infobox officeholder
+|honorific-prefix = [[Excellency|Mudane]]
+| name = Nana Akufo-Addo
+| image = Nana Akufo-Addo at European Development Days 2017.jpg
+| caption = Akufo-Addo 2017
+| office = [[Madaxweynaha Ghana]]
+| vicepresident = [[Mahamudu Bawumia]]
+| term_start = 7 Janaayo
+ 2017
+| term_end = 
+| predecessor = [[John Dramani Mahama]]
+| successor = 
+| office1 = [[Wasiirka Arimaha Dibada (Ghana)|Wasiirka Arimaha Dibada]]
+| president1 = [[John Kufuor]]
+| term_start1 = 1 Abriil 2003
+| term_end1 = 1 Luuliyo 2007
+| predecessor1 = [[Hackman Owusu-Agyeman]]
+| successor1 = [[Akwasi Osei-Adjei]]
+| office2 = [[Attorney General of Ghana]]
+| president2 = [[John Kufuor]]
+| term_start2 = 7 Janaayo 2001
+| term_end2 = 1 Abril 2003
+| predecessor2 = [[Obed Asamoah]]
+| successor2 = [[Papa Owusu-Ankomah]]
+| office3 = Member of Parliament<br/>for [[Akim Abuakwa South (Ghana parliament constituency)|Akim Abuakwa South]]
+| term_start3 = 2005
+| term_end3 = 2009
+| predecessor3 = Constituency established
+| successor3 = [[Samuel Atta Akyea]]
+| office4 = Member of Parliament<br/>for [[Akyem Abuakwa|Abuakwa]]
+| term_start4 = 1997
+| term_end4 = 2004
+| predecessor4 = doorashada abuuray
+| successor4 = Ansixinta dastuurka ayaa la joojiyay
+| birth_name = William Addo Dankwa Akufo-Addo
+| birth_date = {{birth date and age|df=y|1944|3|29}}
+| birth_place = [[Accra]], [[Gold Coast (British colony)|Gold Coast]] {{small|(now [[Ghana]])}}
+| death_date = 
+| death_place = 
+| party = [[New Patriotic Party]]
+| spouse = [[Rebecca Akufo-Addo|Rebecca Griffiths-Randolph]]
+| children = 5 daughters
+| education = [[Lancing College]]<br/>[[New College, Oxford]]<br/>[[University of Ghana]]<br/>[[City Law School|Inns of Court School of Law]]
+| residence = [[The Flagstaff House|Jubilee House]]
+| website = {{url|nanaakufoaddo.org|Campaign website}}
+}}
+'''Nana Addo Dankwa Akufo-Addo''' (dhashay 29 Maarso 1944) waa Madaxweynaha hadda ee [[Ghana]]. Wuxuu xafiiska qabtay ilaa 7 Janaayo 2017. Wuxuu horay u soo noqday [[Xeer Ilaaliyaha Guud]] 2001 ilaa 2003 iyo markii uu ahaa Wasiirka Arimaha Dibada 2003 ilaa 2007 intii uu hogaaminayay dowladii [[Kufuor]].
 
-Nana Addo wuxuu markii ugu horreysay isu soo taagay xilka madaxweynenimo 2008 iyo markale 2012, labada jeerba wuxuu ahaa musharraxa xisbiga New Patriotic Party (NPP), laakiin waxaa labada jeerba kaga adkaaday murashaxiinta National Democratic Congress: John Evans Atta Mills ee 2008 iyo John Dramani Mahama sanadkii 2012 kadib geeridii hore. Wuxuu diiday inuu aqbalo oo uu aado maxkamadda, maxkamadda ugu sarreysa ee Ghana ayaa xaqiijisay guushii John Dramani Mahama. Waxaa loo doortay inuu noqdo murashaxa madaxweynenimada ee Xisbiga New Patriotic Party markii seddexaad doorashada guud ee 2016, markan, wuxuu ka adkaaday John Dramani Mahama wareegii koowaad (isagoo kula guuleystay 53.85% codadkii la dhiibtay), taas oo calaamadeysay markii ugu horreysay doorasho madaxtinimo oo Ghana ah oo musharax mucaaradka ah uu si aqlabiyad leh ugu guuleystay wareegii koowaad
+Nana Addo wuxuu markii ugu horreysay isu soo taagay xilka madaxweynenimo [[2008]] iyo markale [[2012]], labada jeerba wuxuu ahaa musharraxa xisbiga New Patriotic Party (NPP), laakiin waxaa labada jeerba kaga adkaaday murashaxiinta National Democratic Congress: [[John Evans Atta Mills]] ee 2008 iyo [[John Dramani Mahama]] sanadkii 2012.
+
+Maxkamadda ugu sarreysa ee Ghana ayaa xaqiijisay guushii John Dramani Mahama. Waxaa loo doortay inuu noqdo murashaxa madaxweynenimada ee Xisbiga New Patriotic Party markii seddexaad doorashada guud ee [[2016]], markan, wuxuu ka adkaaday John Dramani Mahama wareegii koowaad (isagoo kula guuleystay 53.85% codadkii la dhiibtay), taas oo calaamadeysay markii ugu horreysay doorasho madaxtinimo oo Ghana ah oo musharax mucaaradka ah uu si aqlabiyad leh ugu guuleystay wareegii koowaad.
+
+
+[[Category:Madaxda ghana]] [[Category:ghana]]
