--- a/Boobe_Saxanle_(qori).mw
+++ b/Boobe_Saxanle_(qori).mw
@@ -29,7 +29,7 @@ Magacaas waxaa loogu bixiya qasnada dusha u saaran ee saxanka u eg.
 *{{flag|Poland}}: Used in WWII throughout the Cold War era.{{citation needed|date=August 2013}}
 *{{flag|Seychelles}}: ''RP-46'' variant.<ref name="jones2009"/>
 *{{flag|Somalia}}: ''RP-46'' variant.<ref name="jones2009"/>
-*{{flag|Soviet Union}}<ref name="modern" />
+*{{flag|Russia}}<ref name="modern" />
 *{{flag|Sudan}}: ''RP-46'' variant.<ref name="jones2009"/>
 *{{flag|Tanzania}}: ''RP-46'' variant.<ref name="jones2009"/>
 *{{flag|Togo}}: ''RP-46'' variant.<ref name="jones2009"/>
