--- a/Rastapopoulos.mw
+++ b/Rastapopoulos.mw
@@ -5,6 +5,8 @@
 
 [[File:Tintin-mainSupportingCharacters.png|thumb|300px|The main and several supporting characters of<br/>''[[The Adventures of Tintin]]'', the comics series by [[Hergé]].<bIn the centre are [[Tintin (character)|Tintin]] and [[Snowy (character)|Snowy]]'[[The Castafiore Emerald]]'')]]
 
+[[File:Rastapopoulos prototype in Tintin in America.jpg|thumb|475px|right|]]
+
 
 
 Roberto Rastapopoulos waa dabeecad qiyaal ah ee Adventures of Tintin, taxanaha majaajilada by Cartoonist Hergé. Wuxuu markii ugu horeysey ku soo arkay albaabka Cigars ee Fircooniga (1934) wuxuuna ahaa nin maskax ahaan dambiile ah oo leh aqoonsiyo iyo hawlo kala duwan.
