--- a/Petra-Nabataean.mw
+++ b/Petra-Nabataean.mw
@@ -18,9 +18,9 @@ Inkasta oo Boqortooyada Naataatiga ay noqoto dawlad macaamiil ah Boqortooyada Ro
 
 ==Gallery==
 <gallery mode="packed" heights="140px">
-File:Vägen in.jpg|The Siiq, path to Petra
+File:Vägen in.jpg|The Siiq, 
 File:Al Khazneh 01.jpg|thumb|
-File:Street of Facades, Petra, Jordan1.jpg|Petra is known as the Rose-Red City<ref>{{cite web|url=http://www.grisel.net/petra.htm |title=The Rose-Red City of Petra |publisher=Grisel.net |date=2001-04-26 |accessdate=2012-04-17}}</ref> for the colour of the rocks from which Petra is carved
+File:Street of Facades, Petra, Jordan1.jpg|Petra is known as the Rose-Red City<ref>{{cite web|url=http://www.grisel.net/petra.htm |title=The Rose-Red City of Petra |publisher=Grisel.net |date=2001-04-26 |accessdate=2012-04-17}}</ref> 
 File:El deir petra 1 1839.jpg|Ad Deir ("The Monastery") in 1839, by [[David Roberts (painter)|David Roberts]]
 File:20100925 petra023.JPG|The Petra Visitors Centre in [[Wadi Musa]], the closest town to the historic site
 File:PetraSandStoneRock-cut tombs.jpg|[[Sandstone]] Rock-cut tombs ([[Kokh (tomb)|Kokhim]]) in Petra
