*Empty MediaWiki Message*

--- a/Shukulaato.mw
+++ b/Shukulaato.mw
@@ -1,1 +1,18 @@
-Chocolaato ama '''''Shukulaato''''' waxa waaye mac macaan
+[[File:Chocolate (blue background).jpg|thumb]]
+'''Shukulaato'''  waa macmacaan laga sameeyay miraha la dubay ee [[kakaw|kakawga]](cacao).
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{{gumud}}
+[[category:macmacaan]]
