*Empty MediaWiki Message*

--- a/Emre_Belözoğlu.mw
+++ b/Emre_Belözoğlu.mw
@@ -34,6 +34,6 @@
 | pcupdate       = 10 May 2016
 | ntupdate       = 9 September 2014
 }}
-'''Emre Belözoğlu''' ({{IPA-tr|emˈɾe beˈløzoːɫʊ}}; Ku dhashay 7dii [[sebteembar]] [[1980]]gii magaalada [[Istanbuul|İstanbul]]) Waa kabtankii hore ee Xulka Qaranka Dalka [[Turkiga]] hadana wuxuu u dheela kooxda heerka 1aad ee horyaalka ''Süper Lig'' ee dalka [[Turkiga]] ka dheesha ee İstanbul Başakşehir F.K. Horena wuxuu ugu soo dheelay kooxo waa weyn oo ka dhisan qaaradda [[Yurub]] sida [[Galatasaray SK]], [[Fenerbahce SK]] ee kawada dhisan isla caasimadda [[Istanbuul|İstanbul]], kooxda [[FC Internazionale Milano|Inter Milan]] ee dalka [[Talyaaniga]], Atletico Madrida ka dhisan dalkaasi [[Isbania]] iyo waliba kooxda Newcastle United ee dheesha horyaalka ''Premier League'' ee dalkaasi [[Ingiriiska]].
+'''Emre Belözoğlu''' ({{IPA-tr|emˈɾe beˈløzoːɫʊ}}; Ku dhashay 7dii [[sebteembar]] [[1980]]gii magaalada [[Istanbuul|İstanbul]]) Waa kabtankii hore ee Xulka Qaranka Dalka [[Turkiga]] hadana wuxuu u dheela kooxda heerka 1aad ee horyaalka ''Süper Lig'' ee dalka [[Turkiga]] ka dheesha ee [[İstanbul Başakşehir|İstanbul Başakşehir F.K.]] Horena wuxuu ugu soo dheelay kooxo waa weyn oo ka dhisan qaaradda [[Yurub]] sida [[Galatasaray SK]], [[Fenerbahce SK]] ee kawada dhisan isla caasimadda [[Istanbuul|İstanbul]], kooxda [[FC Internazionale Milano|Inter Milan]] ee dalka [[Talyaaniga]], Atletico Madrida ka dhisan dalkaasi [[Isbania]] iyo waliba kooxda Newcastle United ee dheesha horyaalka ''Premier League'' ee dalkaasi [[Ingiriiska]].
 [[Category:Turki]]
 [[Category:Ciyaaraha]]
