*Empty MediaWiki Message*

--- a/Karin.mw
+++ b/Karin.mw
@@ -1,4 +1,4 @@
 '''Karin''' Karan waa magaalo dakadeed kutaala xeebaha [[Somaliland]] Gaar ahaan [[Gacanka Cadmeed]] waxa ay katirsantahay gobolka [[Saaxil]] magaaladani waxa ay kudhawdahay magaalada [[Berbera]]
 {{gumud}}
-Waxa degan beelaha [[Reeryoonis]], [[habar jeclo]] gaar ahaan maxamed yoonis
+Waxa degan beelaha [Cumar jibriil [habar jeclo]] 
 [[Category:Magaalooyinka gobolka Saaxil]]
