--- a/Xarunta_Ganacsiga_Aduunka.mw
+++ b/Xarunta_Ganacsiga_Aduunka.mw
@@ -1,4 +1,4 @@
-:Qora By abdiwali Mohamed farah
+:Qora By Abdifatah Mohamed Adam
 ::''Kani waa maqaal ku saabsan waax ka mid ah [[Ururka Ganacsiga Aduunka]]. 
 ::''Boga "[[ITC]]" halkan ayaa laga soo toosiyay
 {{Infobox Organization
