--- a/Xarunta_Ganacsiga_Aduunka.mw
+++ b/Xarunta_Ganacsiga_Aduunka.mw
@@ -56,8 +56,7 @@ Intaas waxaa dheer in ururka UNCTAD ka qeyb qaato xidhiidhka iyo horumarinta gan
 *[http://www.intracen.org International Trade Centre (ITC)]
 
 =Tixraac=
-{{Reflist}}
-
+{{Reflist}}Abdifatah mohamed adam shardi
 [[Category:Qaramada Midoobay]][[Category:Siyaasad]]
 [[Category:Ururada caalamiga ah]]
 [[Category:Wadan]]
