/* New Wikipedia Library Collections Now Available (September 2020) */ new section

--- a/Wikipedia:Safaarad.mw
+++ b/Wikipedia:Safaarad.mw
@@ -1333,3 +1333,26 @@ Unfortunately, because of some limitations in [[mw:Manual:What is MediaWiki?|Med
 This project may be postponed if necessary.  You can [[wikitech:Switch Datacenter#Schedule for 2018 switch|read the schedule at wikitech.wikimedia.org]]. Any changes will be announced in the schedule.  There will be more notifications about this.  '''Please share this information with your community.''' 
 </div></div> <span dir=ltr>[[m:User:Trizek (WMF)|Trizek (WMF)]] ([[m:User talk:Trizek (WMF)|talk]])</span> 13:49, 26 Agoosto 2020 (UTC)
 <!-- Message sent by User:Trizek (WMF)@metawiki using the list at https://meta.wikimedia.org/w/index.php?title=Distribution_list/Global_message_delivery&oldid=20384955 -->
+
+== New Wikipedia Library Collections Now Available (September 2020) ==
+
+<div lang="en" dir="ltr" class="mw-content-ltr">
+
+
+Hello Wikimedians! 
+[[File:Wikipedia_Library_owl.svg|thumb|upright|The TWL owl says sign up today!]]
+[[m:The Wikipedia Library|The Wikipedia Library]] is announcing new free, full-access, accounts to reliable sources as part of our [https://wikipedialibrary.wmflabs.org/partners/ research access program]. You can sign up for new accounts and research materials on the [https://wikipedialibrary.wmflabs.org/ Library Card platform]: 
+* '''[https://wikipedialibrary.wmflabs.org/partners/101/ Al Manhal]''' – Arabic journals and ebooks
+* '''[https://wikipedialibrary.wmflabs.org/partners/102/ Ancestry.com]''' – Genealogical and historical records
+* '''[https://wikipedialibrary.wmflabs.org/partners/100/ RILM]''' – Music encyclopedias
+
+Many other partnerships are listed on [https://wikipedialibrary.wmflabs.org/partners/ our partners page], including [https://wikipedialibrary.wmflabs.org/partners/49/ Adam Matthew], [https://wikipedialibrary.wmflabs.org/partners/57/ EBSCO], [https://wikipedialibrary.wmflabs.org/partners/55/ Gale] and [https://wikipedialibrary.wmflabs.org/partners/54/ JSTOR].
+
+A significant portion of our collection now no longer requires individual applications to access! Read more in our [https://diff.wikimedia.org/2020/06/24/simplifying-your-research-needs-the-wikipedia-library-launches-new-technical-improvements-and-partnerships/ recent blog post].
+
+Do better research and help expand the use of high quality references across Wikipedia projects!
+<br>--[[w:en:Wikipedia:TWL/Coordinators|The Wikipedia Library Team]] 09:49, 3 Sebteembar 2020 (UTC)
+
+:<small>This message was delivered via the [https://meta.wikimedia.org/wiki/MassMessage#Global_message_delivery Global Mass Message] tool to [https://meta.wikimedia.org/wiki/Global_message_delivery/Targets/Wikipedia_Library The Wikipedia Library Global Delivery List].</small>
+</div>
+<!-- Message sent by User:Samwalton9@metawiki using the list at https://meta.wikimedia.org/w/index.php?title=Global_message_delivery/Targets/Wikipedia_Library&oldid=20418180 -->
